--- a/src/assets/styles/Index.css
+++ b/src/assets/styles/Index.css
@@ -27,7 +27,7 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: var(--dark-bg);
+  background-color: var(--dark-accent); /* Updated */
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
