--- a/src/assets/styles/Homepage.css
+++ b/src/assets/styles/Homepage.css
@@ -25,7 +25,7 @@
 
 /* Adjust the hero text for different screen sizes */
 .hero-section h1 {
-  font-size: 3rem; /* Adjust the font size as needed */
+  font-size: 2.4rem; /* Adjust the font size as needed */
   margin-bottom: 0.5rem;
   text-align: center; /* Center the heading text */
 }
@@ -52,57 +52,62 @@
      2px 2px 25px rgb(0, 0, 0);
 }
 
-/* Card container styling */
+/* Cards styling */
 .cards-container {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  gap: 20px; /* Creates space between cards */
-  width: 100%; /* Ensures the container takes up the full width */
-  margin-top: 20px; /* Space below the hero section */
-
+  justify-content: center;
+  align-items: flex-start;
 }
 
-/* Card styling for desktop viewports */
 .card {
-  width: 240px; /* Square cards for desktop */
-  margin: 10px;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  text-decoration: none; /* Removes underline from link */
+  color: var(--text-color); /* Inherits text color from parent */
+  background: linear-gradient(var(--light-accent) 50%, var(--text-secondary) 50%); /* Card background color */
+  border-radius: 4px; /* Rounded corners for the card */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8); /* Drop shadow similar to the image */
+  overflow: hidden; /* Ensures the content fits within the rounded corners */
+  transition: box-shadow 0.3s ease, transform 0.2s;
+  display: block; /* Makes the link a block element */
+  width: 300px; /* Width of the card */
+  margin: 20px; /* Space around the card */
+  text-align: center;
+  border-radius: 10px;
 }
 
-.card-image {
-  width: 100%;
-  height: 240px; /* Equal to the width to make it square */
-  object-fit: cover;
+.card:hover {
+  transform: scale(1.1);
 }
+
+.card-content {
+  padding: 16px; /* Padding inside the card */
+}
+
+.card-title {
+  margin: 0; /* Removes default margin */
+  margin-bottom: 8px; /* Space below the title */
+  font-size: 1.5em; /* Title font size */
+}
+
+.card-text {
+  margin: 0; /* Removes default margin */
+  font-size: 1em; /* Text font size */
+}
+
 
 /* Responsive styles for mobile */
 @media (max-width: 600px) {
-  .cards-container {
-    flex-direction: column;
-  }
-  
-  .card {
-    width: calc(100% - 20px); /* Takes up most of the width, accounting for padding */
-    height: 80px;
-    width: 100%;
-    margin: 0;
-  }
-
-  .card-image {
-    width: 100%;
-    height: auto; /* Height is auto to maintain aspect ratio of the image */
-  }
-  
   .hero-section {
     padding: 30px 10px; /* Smaller padding for mobile */
     max-width: 100%; /* Allows the hero section to expand fully */
   }
-}
 
-/* Adjusting the halo effect for mobile */
-@media (max-width: 600px) {
+  .hero-section h1 {
+    font-size: 1.5rem;
+  }
 
+  .card {
+    padding: 5px;
+    width: auto;
+  }
 }
