--- a/src/assets/styles/Index.css
+++ b/src/assets/styles/Index.css
@@ -22,12 +22,14 @@
   --dark-shade: #0a0a0a;
   --light-shade: #f5f5f5;
   --hover-color: rgba(255, 255, 255, 0.1); /* White with opacity for hover effects */
+
+  background-color: var(--dark-accent);
 }
 
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: var(--dark-accent); /* Updated */
+  background-color: var(--dark-accent);
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
