First major commit to github

--- a/src/assets/styles/Casino.css
+++ b/src/assets/styles/Casino.css
@@ -2,17 +2,15 @@
 
 .casino-container {
   padding: 20px;
-  background-color: var(--light-shade); /* Updated to use variable */
+  background-color: transparent; /* Updated to use variable */
   height: auto;
 }
 
 .casino-container h1 {
-  color: var(--dark-accent); /* Updated to use variable */
   text-align: center;
 }
 
 .casino-container p {
-  color: var(--text-secondary); /* Updated to use variable */
   max-width: 600px;
   margin: 20px auto; /* Centers the paragraph with automatic horizontal margins */
   text-align: center;
