--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -9,6 +9,7 @@ header {
   justify-content: space-between;
   align-items: center;
   color: var(--color-text); /* Changed from white to dark text color */
+  max-width: 1120px;
 }
 
 .nav-toggle {
@@ -67,33 +68,33 @@ nav a:hover {
   padding: 20px;
   background-color: transparent;
   color: var(--text-color);
-  max-width: 1000px;
+  max-width: 1120px;
 }
 
-.footer-column {
+.footer-column-left .footer-column-right {
   flex: 1; /* Each column will take equal space */
-  padding: 0px 50px; /* Maintain padding on left and right */
-  min-width: 150px; /* Minimum width for each column */
+  padding: 0px 30px; /* Maintain padding on left and right */
+  width: 500px;
 }
 
-.footer-column h3 {
+.footer h3 {
   margin-bottom: 10px;
 }
 
-.footer-column ul {
+.footer ul {
   list-style: none;
   padding: 0;
 }
 
-.footer-column ul li a {
+.footer ul li a {
   display: block;
   color: var(--text-color);
   text-decoration: none;
   transition: color 0.3s;
-  margin: 10px 0; /* Adjusted for spacing between links */
+  margin: 8px 0; /* Adjusted for spacing between links */
 }
 
-.footer-column ul li a:hover {
+.footer ul li a:hover {
   color: var(--secondary-color);
 }
 
@@ -180,6 +181,6 @@ nav a:hover {
   }
   
   .footer-column {
-    padding: 0 10px;
+  
   }
 }
