--- a/src/assets/styles/Index.css
+++ b/src/assets/styles/Index.css
@@ -23,15 +23,17 @@
   --light-shade: #f5f5f5;
   --hover-color: rgba(255, 255, 255, 0.1); /* White with opacity for hover effects */
 
-  background-image:url('../images/bg-dalle-gold-gambling-motif-DARKENED.png');
   
 }
 
 body {
+  background-image: url('../images/bg-dalle-gold-gambling-motif-DARKENED.png');
   margin: 0;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: transparent;
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1120px;
 }
