--- a/src/assets/styles/Poker.css
+++ b/src/assets/styles/Poker.css
@@ -2,19 +2,19 @@
 
 .poker-container {
   padding: 20px;
-  background-color: var(--light-shade);
+  background-color: transparent;
   height: auto;
+  margin: 20px;
 }
 
 .poker-container h1 {
-  color: var(--dark-shade);
   text-align: center;
 }
 
 .poker-container p {
-  color: var(--text-secondary);
   max-width: 600px;
   margin: 20px auto;
   /* Centers the paragraph with automatic horizontal margins */
   text-align: center;
 }
+
