--- a/src/sports/ParlayCalculator/ParlayCalculator.css
+++ b/src/sports/ParlayCalculator/ParlayCalculator.css
@@ -159,6 +159,9 @@
     color: var(--text-color);
     background-color: var(--secondary-color);
     cursor: pointer;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 .calculate-reset-buttons .reset-button {
